name:                 smvm-mkl
version:              0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:              BSD3
-- license-file:         LICENSE
author:               Trevor L. McDonell
maintainer:           Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
copyright:            BSD3
build-type:           Simple
-- extra-source-files:   README.md
cabal-version:        >=1.10

executable smvm-mkl
  main-is:            Main.hs
  other-modules:      Matrix
  ghc-options:        -Wall -O2 -rtsopts -threaded
  cc-options:         -Wall -O3 -m64
  build-depends:
        base
      , criterion
      , deepseq
      , directory
      , mwc-random
      , vector
      , vector-algorithms

  include-dirs:       cbits
  c-sources:          cbits/mmio.c cbits/matrix_market.c

  include-dirs:       /opt/intel/mkl/include
  extra-lib-dirs:     /opt/intel/lib /opt/intel/mkl/lib

  extra-libraries:    mkl_intel_lp64 mkl_intel_thread mkl_core iomp5 pthread
  -- extra-libraries:    mkl_intel_lp64 mkl_sequential mkl_core pthread

  build-tools:        c2hs

  default-language:   Haskell2010

-- vim: nospell

